package Modul_9;

public abstract class bangundatar {
    abstract  double hitungKeliling();
    abstract  String nama();
    abstract double hitungLuas();
}
